# comfit20.github.io

./: .gitignore  CNAME  about.html  contact.html  disclaimer.html  howto.html  index.html  schedule.html  selection.html  selection_yoga.html  test.html  workout.html  workout_group.html  yoga.html  yoga_group.html  yoga_group_vinyasa.html
markov/: Pipfile  buildworkout.py  copus.txt  demofile2.txt  markov.py
static/: example.json  example_private.json
static/css/: cover.css  global.css  index.css  workout.css
static/data/: ExerciseList.json  ExerciseList_yoga.json  allWorkout.json  buildworkout.py  buildworkout.py.orig  music.json  music_yoga.json  music_yoga_carolyn.json  workout1 copy.json  workout1.json  workout10.json  workout100.json  workout101.json  workout102.json  workout103.json  workout104.json  workout105.json  workout106.json  workout108.json  workout11.json  workout112.json  workout113.json  workout116.json  workout12.json  workout120.json  workout121.json  workout123.json  workout124.json  workout126.json  workout127.json  workout128.json  workout129.json  workout13.json  workout131.json  workout132.json  workout134.json  workout135.json  workout136.json  workout137.json  workout139.json  (+510 more)
static/js/: brython.js  helper.js  index.js  main.js  selection.js  selection.js.orig  selection_yoga.js  testfunc.js  workout.css  workout.js  workout_generator.js  workout_generator_yoga.js  yoga.js  yoga_vinyasa.js
static/libs/: countdown.js  date.js  package-lock.json
static/misc/: convertYogaVideos.sh
test/: pyproject.toml  test.py
(+284 files in other folders)
