[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["raphael <wirthra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"



[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
